# PV-IQA-project

./: .gitignore  README.md  pyproject.toml  run.py  train.py
app/: index.html  package.json  server.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
app/backend/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py
app/backend/middleware/: __init__.py  error_handler.py  logging.py
app/backend/routers/: __init__.py  auth.py  health.py  images.py  jobs.py  logs.py  models.py  score.py  settings.py
app/backend/services/: __init__.py  metadata.py  scoring.py  uploads.py
app/scripts/: stop.sh
app/src/: App.tsx  index.css  main.tsx
app/src/components/: app-shell.tsx  charts.tsx  disclosure.tsx  image-preview.tsx  logo.tsx  stat-card.tsx
app/src/components/demo/: app-shell.tsx  demo-charts.tsx  demo-disclosure.tsx  demo-image-preview.tsx  demo-stat-card.tsx  history-page.tsx  workspace-page.tsx
app/src/components/ui/: dialog.tsx
app/src/hooks/: use-auth.tsx  use-dashboard.ts  use-demo-dashboard.ts  use-notifications.ts  use-theme-mode.ts
app/src/lib/: analytics.ts  api.ts  demo-analytics.ts  demo-format.ts  format.ts  theme.ts  types.ts  uploads.ts  utils.ts
app/src/pages/: compare.tsx  history.tsx  login.tsx  logs.tsx  register.tsx  settings.tsx  users.tsx  workspace.tsx
configs/: default.yaml
expr/proof/: .gitignore  report.md  run_experiments.py
src/deprecated/: err_roi.py
src/pv_iqa/: cli.py  config.py  detect.py  eval.py  inference.py  train.py
src/pv_iqa/models/: __init__.py  backbone.py  iqa.py  recognition.py  recognizer.py
src/pv_iqa/models/layers/: __init__.py  attention.py  metric_head.py  mixer.py  waveformer.py
src/pv_iqa/train/: iqa.py  pseudo_labels.py  recognition.py
src/pv_iqa/utils/: __init__.py  common.py  data.py  datasets.py  degradation.py  export_onnx.py  io.py  logging.py  losses.py  metrics.py  pseudo_labels.py  rust_preprocess_helper.py  seed.py  serialize.py  transforms.py
