[project]
name = "pv-iqa"
version = "0.1.0"
description = "Palm vein image quality assessment with unsupervised pseudo-labeling and lightweight regression"
readme = "README.md"
authors = [{ name = "WangWindow", email = "1598593280@qq.com" }]
requires-python = ">=3.14"
dependencies = [
    "evaluate>=0.4.6",
    "huggingface-hub>=1.9.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "safetensors>=0.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "timm>=1.0.26",
    "torch>=2.11.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "typer>=0.24.1",
    "wandb>=0.25.1",
]

[project.scripts]
pv-iqa = "pv_iqa:main"

[dependency-groups]
dev = ["build>=1.4.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pv_iqa"]

[tool.uv]
python-install-mirror = "https://registry.npmmirror.com/-/binary/python-build-standalone/"

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true
